[package]
authors = ["Ramsay <ramsayleung@gmail.com>"]
name = "blog"
version = "0.9.9"

[dependencies]
log = "0.4.8"
dotenv = "0.15.0"
error-chain = "0.12.1"
lazy_static = "1.1.0"
r2d2 = "0.8.7"
r2d2-diesel = "1.0.0"
rocket = "0.4.5"
serde = { version = "1.0.70", features = ["derive"] }
serde_derive = "1.0.70"
serde_json = "1.0.24"
tera = "0.11.20"
bcrypt = "0.6"
rand = "0.7"
# 确保和diesel的ipnetwork 版本一致, 用cargo tree 命令查看
ipnetwork = "0.16.0"
rocket_contrib={version="0.4.5", features = ["handlebars_templates", "tera_templates", "json"]}
fern = { version = "0.6.0", features = ["colored"] }
[dependencies.chrono]
features = ["serde", "rustc-serialize"]
version = "0.4.7"

[dependencies.diesel]
features = ["postgres", "chrono","network-address","serde_json"]
version = "1.3.2"