[package]
authors = ["Ramsay <ramsayleung@gmail.com>"]
name = "blog"
version = "0.9.9"
edition = "2018"
readme = "README.md"
description = "A blog built on Rust"
homepage = "https://github.com/ramsayleung/blog"
repository = "https://github.com/ramsayleung/blog"

[dependencies]
log = "0.4.14"
dotenv = { version = "0.15.0", optional = true } 
r2d2 = "0.8.9"
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_dyn_templates={ version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tera = "1.11.0"
bcrypt = "0.12.0"
# ipnetwork must has the same version as what diesel does, we could check these versions by `cargo-tree`
ipnetwork = "0.18.0"
fern = { version = "0.6.0", features = ["colored"] }
chrono={ features = ["serde", "rustc-serialize"], version = "0.4.19" }
diesel = { features = ["postgres", "chrono", "network-address", "serde_json", "r2d2"], version = "2.0.2" }
lazy_static = "1.4.0"

[features]

env-file = ["dotenv"]
